feat: update log post

--- a/content/news/2025-10-20_bmt-2025-logistics.md
+++ b/content/news/2025-10-20_bmt-2025-logistics.md
@@ -9,14 +9,23 @@ this email in its entirety as it contains the tournament day logistics.
 
 <!-- more -->
 
-{% button_link(href="/events/bmt-2025") %} Event Details {% end %}
+## Registration Information
 
-## Important Information
+Phase 2 Registration has now concluded. Seats are still available for purchase
+for $25 until October 31. T-shirts are no longer available for purchase. Lunch
+is available for purchase until October 31. The cutoff date for joining our
+hotel room block with Hotel Shattuck Plaza is October 31.
+
+Visit our registration details page for information on these options.
+
+{% button_link(href="/events/bmt-2025") %} Event/Registration Details {% end %}
+
+## General Reminders
 
 During BMT, we will be posting updates to the website (<https://berkeley.mt>),
 including tiebreaker qualifiers. Please be on the lookout for any announcements.
 For any day-of directions, questions or concerns ask a BMT staff member or
-volunteer, which you can identify by their BMT shirt.
+volunteer, which you can identify by their pale pink BMT shirt.
 
 An annotated campus map is provided at the bottom of this page.
 
@@ -54,6 +63,20 @@ At check-in, coaches will receive:
 **Check in closes promptly at 8:45 AM**, so please be on time. If you arrive
 after this time, your team will be late to the power round, which puts them at a
 great disadvantage.
+
+### What to pack
+
+We suggest students bring the following items to BMT:
+
+- A backpack or small bag for carrying materials and swag
+- Multiple pencils and erasers
+- Lunch or money for lunch, if you didn't order it
+- A water bottle to stay hydrated throughout the day
+- Comfortable walking shoes (you'll be moving between buildings)
+- Layers of clothing (temperatures can vary)
+
+Scratch paper will be provided for all participants, so please do not bring your
+own.
 
 ### Parking
 
@@ -184,6 +207,8 @@ in. A map is attached in the information packet provided at check-in.
 There will be a one-hour lunch period in the middle of the day for students to
 get food. Pre-purchased lunches will be available for pick up outside Dwinelle
 Hall. Many other options are available on the southern side of Berkeley campus.
+
+Lunch is available for purchase until October 31, 2025.
 
 ## Activities
 
