feat: update bmt 2025 maps

--- a/content/events/bmt-2025.md
+++ b/content/events/bmt-2025.md
@@ -85,14 +85,10 @@ UC Berkeley is situated in the East Bay region of Northern California,
 just across the bay from San Francisco. The Berkeley campus is a 10 to 15 minute
 walk from the Downtown Berkeley BART transit station, which connects directly to
 both the Oakland and San Francisco airports. Berkeley is also easily
-accessible by car. Information about parking can be found in our
-[FAQ](#where-can-i-find-parking-how-can-i-get-to-berkeley).
+accessible by car.
 
-A printable PDF map of campus can be found
-[here](https://www.berkeley.edu/map-pdf/campusmap.pdf), and more maps can be
-found at [berkeley.edu/map](https://www.berkeley.edu/map). Note that the top of
-the PDF map represents the eastern parts of campus. Google Maps is also usually
-reliable for navigating campus.
+For detailed information about parking, public transportation, and campus maps,
+please see our [Tournament Day Logistics](/news/bmt-2025-logistics/) post.
 
 ### Hotels
 
@@ -341,19 +337,9 @@ we may offer an online option for remote participation.
 ### Where can I find parking? How can I get to Berkeley?
 
 BMT does not provide travel or parking for students — coaches should arrange
-their own travel logistics. There are a number of parking garages around campus,
-including the Telegraph-Channing Garage, Underhill Structure, Lower Hearst
-Structure, and the RSF Garage.
-
-The Telegraph-Channing Garage is recommended for most people; it is cheaper than
-campus-owned garages (and free up to an hour) and more conveniently located than
-most of the garages listed.
-
-Berkeley is also public-transport-friendly. The Downtown Berkeley BART station
-is next to campus, and may be a good fit for those commuting from San Francisco
-or the East Bay. For teams staying in Emeryville, bus line 36 will take you
-directly to campus. Check the [AC Transit](https://www.actransit.org/) website
-for more options.
+their own travel logistics. For detailed information about parking, public
+transportation options, and campus maps, please see our
+[Tournament Day Logistics](/news/bmt-2025-logistics/) post.
 
 [Teammate Finder]: https://docs.google.com/spreadsheets/d/1A-yuY0MD7x8fizKehsWQ5eTWF8jxCxETvUezwhtUNEk/edit
 [ContestDojo Guide]: https://docs.berkeley.mt/s/contestdojo-guide
