--- a/content/news/2025-10-20_bmt-2025-logistics.md
+++ b/content/news/2025-10-20_bmt-2025-logistics.md
@@ -1,5 +1,5 @@
 +++
-title = "BMT 2025 November 8 Tournament Day Logistics"
+title = "BMT 2025 November 8 Tournament Day Logistics (updated!)"
 +++
 
 To all coaches and students,
@@ -8,6 +8,13 @@ Thanks for signing up for BMT! We're excited to have you on board. Please read
 this email in its entirety as it contains the tournament day logistics.
 
 <!-- more -->
+
+{% alert(title="Recent Updates to This Page", status="info") %}
+**October 31, 2025**: Added BART transportation recommendations in the Travel
+and Transportation section. We encourage teams to take BART if convenient to
+avoid parking challenges and traffic. Additionally, we've updated the campus map
+and added a parking maps to help you navigate to the tournament venues.
+{% end %}
 
 ## Registration Information
 
@@ -78,17 +85,22 @@ We suggest students bring the following items to BMT:
 Scratch paper will be provided for all participants, so please do not bring your
 own.
 
-### Parking
+### Travel and Transportation
 
-Parking can be found near campus at the following locations:
+If convenient, we recommend taking BART (Bay Area Rapid Transit) to campus. The **Downtown Berkeley BART station** is located just a few blocks from campus and provides easy access to the tournament venues. From the station, it's approximately a 10-minute walk to Dwinelle Hall. Taking BART can help you avoid parking challenges and traffic, especially during peak hours.
 
-- Telegraph-Channing Garage _(recommended)_
-- Underhill Garage
+If you would prefer to drive, parking can be found near campus at many
+locations. We recommend the following options, which are also highlighted on the
+map attached below:
+
+- Telegraph-Channing Garage
 - RSF Garage
-- Lower Sproul Garage
-- Ellsworth Garage
+- Underhill Parking
+- Stadium Parking Garage
+- Allston Way Garage
+- Lower Hearst Structure
 
-More parking options are listed at the [Berkeley Parking and Transportation website].
+![Annotated Parking Map](/assets/bmt-2025/parking-map.jpg)
 
 ## Schedule of Events
 
@@ -335,7 +347,7 @@ assigned**, or else they may not receive their award on time.
 
 ## Campus Map
 
-![Annotated Campus Map](/assets/bmt-2025/campus-map.png)
+![Annotated Campus Map](/assets/bmt-2025/campus-map.jpg)
 
 ---
 
