feat: update parking

--- a/content/news/2025-10-20_bmt-2025-logistics.md
+++ b/content/news/2025-10-20_bmt-2025-logistics.md
@@ -98,7 +98,9 @@ map attached below:
 - Underhill Parking
 - Stadium Parking Garage
 - Allston Way Garage
+- Center Street Garage
 - Lower Hearst Structure
+- UNEX Lot
 
 ![Annotated Parking Map](/assets/bmt-2025/parking-map.jpg)
 
