feat: add recent update

--- a/content/news/2025-10-20_bmt-2025-logistics.md
+++ b/content/news/2025-10-20_bmt-2025-logistics.md
@@ -10,6 +10,11 @@ this email in its entirety as it contains the tournament day logistics.
 <!-- more -->
 
 {% alert(title="Recent Updates to This Page", status="info") %}
+**November 7, 2025**: Swapped activity room assignments for Pico Gilman's talk
+(now in Dwinelle 155) and Integration Bee (now in Dwinelle 145). Added specific
+location for Redstone Engineering activity (OCF on first floor of MLK). Removed
+signup form requirement for Redstone Engineering.
+
 **October 31, 2025**: Added BART transportation recommendations in the Travel
 and Transportation section. We encourage teams to take BART if convenient to
 avoid parking challenges and traffic. Additionally, we've updated the campus map
