feat: add all rooms

--- a/content/news/2025-10-20_bmt-2025-logistics.md
+++ b/content/news/2025-10-20_bmt-2025-logistics.md
@@ -146,8 +146,8 @@ map attached below:
   <td>
     Please choose a room <i>at random</i> that has your set of tests.<br>
     <b>General Test</b> — Pauley Auditorium, VLSB 2050<br>
-    <b>Algebra & Geometry</b> — Dwinelle 79, 88, 105, 106, 179, 182, 187, 258, 259<br>
-    <b>Algebra & Discrete</b> — Dwinelle 223, 229, 234, 235, 242, 246, 251<br>
+    <b>Algebra & Geometry</b> — Dwinelle 79, 83, 87, 88, 105, 106, 109, 130, 179, 182, 183, 187, 258, 259<br>
+    <b>Algebra & Discrete</b> — Dwinelle 223, 228, 229, 234, 235, 242, 243, 246, 247, 250, 251, 254, 255<br>
     <b>Algebra & Calculus</b> — Wheeler 20, 24, 30, 120, 124, 130<br>
     <b>Discrete & Geometry</b> — Wheeler 102, 104, 108, 200<br>
     <b>Discrete & Calculus</b> — Wheeler 202, 204<br>
