Modifications from feedback

--- a/content/events/bmmt-2026.md
+++ b/content/events/bmmt-2026.md
@@ -96,7 +96,7 @@ reliable for navigating campus.
 
 ## Schedule
 
-A detailed event schedule will be posted soon
+While the time is not finalised, you can assume that the event will start at 8:00 AM and end at 6:30 PM PT. A detailed event schedule will be posted soon. 
 
 ## Contest Format
 
@@ -253,8 +253,7 @@ incorrect, even if equivalent.
 
 ## Activities
 
-Updated information about activities can be found on the
-[Tournament Day Logistics] page.
+Updated information about activities will be announced soon.
 
 ## Frequently Asked Questions
 
