update lunch text

--- a/content/events/bmmt-2026.md
+++ b/content/events/bmmt-2026.md
@@ -15,8 +15,9 @@ there is **no lower age limit** to participate; advanced elementary school
 students are welcome to compete. Teams may have up to 5 students. You do not
 have to be local to the Bay Area or California to register for BmMT.
 
-For those unable to make it to UC Berkeley campus, we're also offering BmMT
-2026 Online, a synchronous online event, on a TBA date. 
+For those unable to make it to UC Berkeley campus, we're also offering [BmMT
+2026 Online](https://berkeley.mt/events/bmmt-2026-online/), a synchronous online
+event, on June 6, 2026.
 
 This page contains primarily registration details. Detailed information on the logistics will come soon.
 
@@ -34,7 +35,7 @@ We have historically sold out all available seats for the past few years. Make s
 
 | Dates      | Registration Period | Price Per Student | Additional Notes                                                                       |
 | ---------- | ------------------- | ----------------- | -------------------------------------------------------------------------------------- |
-| 2/9 – 3/1 | Phase 1             | $15               | Limited to 30 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
+| 2/9 – 3/1  | Phase 1             | $15               | Limited to 30 seats per organization.<br>Shirts may be pre-ordered for $8 per student. |
 | 3/2 – 3/15 | Phase 2             | $15               | No limit on seats per organization.<br>Shirts may be pre-ordered for $8 per student.   |
 | 3/16 – 4/3 | Late Registration   | $25               | Shirts are not guaranteed, but may be purchased day-of for $10.                        |
 
@@ -96,7 +97,24 @@ reliable for navigating campus.
 
 ## Schedule
 
-While the time is not finalised, you can assume that the event will start at 8:00 AM and end at 6:30 PM PT. A detailed event schedule will be posted soon. 
+While the time is not finalised, you can assume that the event will start at 8:00 AM and end at 6:30 PM PT. A detailed event schedule will be posted soon.
+
+### Lunch
+
+This year, we are offering lunch for students, coaches, and parents at $12 per
+person, catered from [Crave Subs](https://www.cravesubs.com/), a sandwich store
+local to Berkeley. Those who wish to take this option **must pre-order on
+ContestDojo** through their coach. There are three menu items to choose from:
+
+- Ned Flanders — Turkey, Crave Sauce, Lettuce, & Tomato
+- Mr. Incredible — Pastrami, Crave Sauce, Lettuce, & Tomato
+- Vegan Marvin The Martian — Cucumbers, Pesto, Arugula, Crave Sauce, Lettuce, & Tomato
+
+We are considering possible additional options for vegetarian meals, to be announced.
+
+Students, coaches and parents are also free to find their own food. Many
+restaurants can be found on the south side of campus (~5 minute walk from rooms)
+and in Downtown Berkeley (~15 minute walk from rooms).
 
 ## Contest Format
 
@@ -299,5 +317,3 @@ is next to campus, and may be a good fit for those commuting from San Francisco
 or the East Bay. For teams staying in Emeryville, bus line 36 will take you
 directly to campus. Check the [AC Transit](https://www.actransit.org/) website
 for more options.
-
-[Tournament Day Logistics - TBA]: 
